--- a/app/globals.css
+++ b/app/globals.css
@@ -83,3 +83,45 @@ body,
   scroll-behavior: smooth;
 }
 
+
+
+/*
+html::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none; 
+}
+
+*/
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.4rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: hsl(0 0% 100%);
+  border-radius: 0.2rem;
+}
+
+.dark ::-webkit-scrollbar-track {
+  background: hsl(240 10% 3.9%);
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: hsl(240 10% 3.9%);
+  border-radius: 5px;
+}
+.dark ::-webkit-scrollbar-thumb {
+  background-color: hsl(0 0% 100%);
+}
+
+/* Handle on hover */
+.dark ::-webkit-scrollbar-thumb:hover {
+  background: hsl(240, 6%, 51%);
+}
+ ::-webkit-scrollbar-thumb:hover {
+  background: hsl(214, 3%, 41%);
+}
